--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: "#4577"
 
 # Short bio or description (displayed in the header)
-description: yduf memory dump
+description: yduf core-dump
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/13983772?v=3&s=400
